# src/main/java/com/daramg/server/domain/post/dto/PostUpdateDto.kt
@@ -10,7 +10,7 @@ sealed class PostUpdateDto (
     @get:Size(min = 5, max = 3000, message = "내용은 5자 이상 3000자 이하로 입력해주세요")
     open val content: String?,
 
-    open val postStatus: PostStatus,
+    open val postStatus: PostStatus?,
     open val images: List<String>?,
     open val videoUrl: String?,
     open val hashtags: List<String>?,
@@ -18,7 +18,7 @@ sealed class PostUpdateDto (
     data class UpdateFree(
         override val title: String?,
         override val content: String?,
-        override val postStatus: PostStatus,
+        override val postStatus: PostStatus?,
         override val images: List<String>?,
         override val videoUrl: String?,
         override val hashtags: List<String>?
@@ -27,7 +27,7 @@ sealed class PostUpdateDto (
     data class UpdateStory(
         override val title: String?,
         override val content: String?,
-        override val postStatus: PostStatus,
+        override val postStatus: PostStatus?,
         override val images: List<String>?,
         override val videoUrl: String?,
         override val hashtags: List<String>?
@@ -36,7 +36,7 @@ sealed class PostUpdateDto (
     data class UpdateCuration(
         override val title: String?,
         override val content: String?,
-        override val postStatus: PostStatus,
+        override val postStatus: PostStatus?,
         override val images: List<String>?,
         override val videoUrl: String?,
         override val hashtags: List<String>?,
